# grasshopper-mcp

./: .gitignore  CLAUDE.md  README.md  grasshopper_prompt_template.md  grasshopper_prompt_template.txt  pyproject.toml  setup.py
GH_MCP/GH_MCP/: GH_MCPComponent.cs  GH_MCPInfo.cs
GH_MCP/GH_MCP/Commands/: ComponentCommandHandler.cs  ConnectionCommandHandler.cs  DocumentCommandHandler.cs  GeometryCommandHandler.cs  GrasshopperCommandRegistry.cs  IntentCommandHandler.cs
GH_MCP/GH_MCP/Models/: Connection.cs  GrasshopperCommand.cs
GH_MCP/GH_MCP/Utils/: FuzzyMatcher.cs  IntentRecognizer.cs
grasshopper_mcp/: bridge.py  component_guide.json  component_library.json  component_mapping.json
