[project]
name = "grasshopper-mcp"
version = "0.1.0"
description = "Grasshopper MCP Bridge Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=0.1.0", "websockets>=10.0", "aiohttp>=3.8.0"]
keywords = ["grasshopper", "mcp", "bridge", "server"]
authors = [{ name = "Alfred Chen", email = "yanlin.hs12@nycu.edu.tw" }]

[project.urls]
Homepage = "https://github.com/alfredatnycu/grasshopper-mcp"

[project.scripts]
grasshopper-mcp = "grasshopper_mcp.bridge:main"

[dependency-groups]
dev = ["ruff>=0.12.5"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
